--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   },
   "content_scripts": [
     {
-      "matches": [ "https://codeforces.com/contest/*" ],
+      "matches": [ "https://codeforces.com/*" ],
       "css": ["app.css"]
     }
   ]
